Ext ref impl